--- a/style.css
+++ b/style.css
@@ -189,3 +189,17 @@ nav .link:hover {
     align-items: center;
     justify-content: space-between;
 }
+
+p {
+    margin: 20px auto;
+    line-height: 30px;
+    color: #262626;
+}
+
+.blog-content {
+    text-align: justify;
+}
+
+.blog-date {
+    color: gray;
+}
