--- a/style.css
+++ b/style.css
@@ -110,6 +110,14 @@ nav .link:hover {
 
 .hero {
     padding: 1rem !important;
+    background-color: #FFE53B;
+    background-image: linear-gradient(147deg, #FFE53B 0%, #FF2525 74%);
+}
+
+.hero-container {
+    background: rgba(255, 255, 255, 0.4);
+    backdrop-filter: blur(10px);
+    border-radius: 10px;
 }
 
 .hero .hero-img {
@@ -122,7 +130,7 @@ nav .link:hover {
 .hero .hero-heading {
     text-align: center;
     padding-top: 1rem;
-    color: var(--dark-gray);
+    color: var(--off-white);
 }
 
 .hero .hero-heading .heading-inverted {
@@ -144,7 +152,7 @@ nav .link:hover {
     background-color: var(--off-white);
 }
 
-/** footers **/
+/** footer **/
 
 .footer {
     background-color: var(--primary-color);
@@ -169,7 +177,7 @@ nav .link:hover {
 
 /** projects **/
 .showcase-list {
-    padding: 2rem;
+    padding: 2.5rem;
 }
 
 /** blogs **/
